fix: search input shifts with long quotes on desktop

--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
 	height: 64px;
+	width: fit-content;
+	margin-inline: auto;
 }
 
 .overlay {
